fixed z-index for mint link

--- a/layout.css
+++ b/layout.css
@@ -52,7 +52,7 @@ body {
     background-color: white;
     transition: box-shadow 0.3s ease;
     margin-top: 100px;
-    position: fixed;
+    z-index: 1;
   }
 
   a:hover {
